--- a/style.css
+++ b/style.css
@@ -36,3 +36,27 @@ h1{
     background-repeat: no-repeat;
     background-position: right;
 }
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+h2{
+    font-size: 35px;
+}
+.experience-col{
+    width: 40%;
+    margin: 0 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding: 20px;
+    border-radius: 10px;
+}
+#colunm-two{
+    border-left: 7px solid dodgerblue;
+}
+#colunm-one{
+    border-left: 7px solid tomato;
+}
+footer p{
+    text-align: center;
+}
